How this works for windows